@@ -6,17 +6,15 @@ import edu.colorado.phet.sugarandsaltsolutions.micro.model.Bond;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.BondType;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.ImmutableList;
-import edu.colorado.phet.sugarandsaltsolutions.micro.model.Lattice;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.OpenSite;
-
-import static edu.colorado.phet.sugarandsaltsolutions.micro.model.BondType.*;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.SquareLattice;
 
 /**
  * Data structures and algorithms for creating and modeling a sugar crystal lattice.  Instances are immutable.
  *
  * @author Sam Reid
  */
-public class SucroseLattice extends Lattice<SucroseLattice> {
+public class SucroseLattice extends SquareLattice<SucroseLattice> {
 
     public SucroseLattice() {
         super( new ImmutableList<Component>( new SucroseComponent() ), new ImmutableList<Bond>() );
@@ -26,27 +24,9 @@ public class SucroseLattice extends Lattice<SucroseLattice> {
         super( components, bonds );
     }
 
-    //Find the available sites where a new component might be added
-    //TODO: duplicated with salt lattice
-    @Override protected ArrayList<OpenSite<SucroseLattice>> getOpenSites() {
-        ArrayList<OpenSite<SucroseLattice>> openSites = new ArrayList<OpenSite<SucroseLattice>>();
-        for ( Component component : components ) {
-            for ( BondType bondType : new BondType[] { UP, DOWN, LEFT, RIGHT } ) {
-                testAddSite( openSites, component, getBonds( component ), bondType );
-            }
-        }
-        return openSites;
-    }
-
     @Override protected void testAddSite( ArrayList<OpenSite<SucroseLattice>> openSites, Component component, ArrayList<Bond> bonds, BondType type ) {
         if ( !containsBondType( bonds, type ) ) {
             openSites.add( new SucroseSite( component, type ) );
         }
-    }
-
-    //Sample main to test lattice construction
-    public static void main( String[] args ) {
-        Lattice lattice = new SucroseLattice().grow( 100 );
-        System.out.println( "sugarLattice = " + lattice );
     }
 }
